# dyncli

./: .gitignore  README.md  dyncli.py  pyproject.toml  requirements.txt  server.py  setup.py
server/: app.py  router.py
