[tool.poetry]
name = "nsa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
nsa = "dyncli.src.nsa.dyncli:client"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
requests = "^2.31.0"

